--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "8.2.4",
-    "@angular/cdk": "7.3.7",
+    "@angular/cdk": "8.2.3",
     "@angular/common": "8.2.4",
     "@angular/compiler": "8.2.4",
     "@angular/core": "8.2.4",
     "@angular/forms": "8.2.4",
-    "@angular/material": "7.3.7",
+    "@angular/material": "8.2.3",
     "@angular/platform-browser": "8.2.4",
     "@angular/platform-browser-dynamic": "8.2.4",
     "@angular/router": "8.2.4",
     "core-js": "2.5.4",
     "rxjs": "6.6.7",
     "tslib": "1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.2",
+    "@angular-devkit/build-angular": "0.802.2",
     "@angular/cli": "8.2.2",
     "@angular/compiler-cli": "8.2.4",
     "@angular/language-service": "8.2.4",
     "@types/jasmine": "2.8.6",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "8.9.4",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "5.0.1",
     "font-awesome": "4.7.0",
     "jasmine-core": "2.99.1",
     "jasmine-spec-reporter": "4.2.1",
