--- a/package.json
+++ b/package.json
@@ -24,29 +24,29 @@
     "@angular/router": "10.2.5",
     "core-js": "2.5.4",
     "rxjs": "6.6.7",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "tslib": "2.0.0",
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.3",
+    "@angular-devkit/build-angular": "0.1002.3",
     "@angular/cli": "10.2.3",
     "@angular/compiler-cli": "10.2.5",
     "@angular/language-service": "10.2.5",
     "@types/jasmine": "2.8.6",
     "@types/jasminewd2": "2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/node": "12.11.1",
+    "codelyzer": "5.1.2",
     "font-awesome": "4.7.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "jasmine-core": "3.5.0",
+    "jasmine-spec-reporter": "5.0.0",
+    "karma": "5.0.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.2",
+    "karma-jasmine": "4.0.0",
+    "karma-jasmine-html-reporter": "1.5.0",
+    "protractor": "7.0.0",
     "ts-node": "5.0.1",
-    "tslint": "~6.1.0",
+    "tslint": "6.1.0",
     "typescript": "4.0.7"
   }
 }
